CSS fix
modal shade is ‘fixed’ to keep it covering the app if the modal needs
to scroll for short windows.

--- a/css/app.css
+++ b/css/app.css
@@ -82,7 +82,7 @@ td:not(:first-child) {
 .modal__shade {
     visibility: hidden;
     opacity: 0;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
